--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">Hero finder</string>
+    <string name="app_name">Hero Finder</string>
+    <string name="hero_builder_default_title">Choose Super Powers!</string>
+    <string name="hero_builder_expanded_title">Number of chosen powers: %d</string>
+    <string name="search_button">Search</string>
+    <string name="try_again_button">Try Again</string>
+
 </resources>
